<resources>
    <string name="app_name">GURPS Generator</string>
    <string name="action_settings">Settings</string>
    <string name="character_name">Имя персонажа</string>
    <string name="max_points">Количество очков</string>
    <string name="create">Создать</string>
    <string name="delete">Удалить</string>
    <string name="select">Выбрать</string>
    <string name="delete_single">Удален</string>
    <string name="no_fine_manipulators">Нет хороших манипуляторов</string>
    <string name="player_name">Имя игрока</string>
    <string name="growth">Рост</string>
    <string name="weight">Вес</string>
    <string name="age">Возраст</string>
    <string name="tl_short">ТУ</string>
    <string name="tl_cost_short">ТУ стоимость</string>
    <string name="size_modifier">Модификатор размера</string>
    <string name="strength">Сила</string>
    <string name="dexterity">Ловкость</string>
    <string name="intellect">Интелект</string>
    <string name="health">Здоровье</string>
    <string name="defaultCharacteristicValue">10</string>
    <string name="defaultCharacteristicCost">0</string>
    <string name="health_points">Очки здоровья</string>
    <string name="will">Воля</string>
    <string name="perception">Восприятие</string>
    <string name="fatigue_points">Очки усталости</string>
    <string name="basic_speed">Базовая скорость</string>
    <string name="basic_move">Базовое движение</string>
    <string name="basic_lift">Базовый груз</string>
    <string name="doge">Уклонение</string>
    <string name="damage_thrust">Повреждение прямое</string>
    <string name="damage_swing">Повреждение амплитудное</string>

    <string name="character_params">Параметры персонажа</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="max_points_all">Максимум очков</string>
    <string name="points_use">Использовано очков</string>
    <string name="name">Название</string>
    <string name="name_en">Название Англ.</string>
    <string name="type">Тип</string>
    <string name="cost">Стоимость</string>
    <string name="description">Описание</string>

    <!-- Features -->
    <string name="physical_short">Ф</string>
    <string name="social_short">Соц</string>
    <string name="mental_short">М</string>
    <string name="exotic_short">Э</string>
    <string name="supernatural_short">С</string>
    <string name="advantages">Преимущества</string>
    <string name="disadvantages">Недостатки</string>
    <string name="add">Добавить</string>
    <string name="add_and_full">Добавить и подробнее</string>
    <string name="full">Подробнее</string>
    <string name="remove">Удалить</string>
    <string name="level">Уровень</string>
    <string name="one">1</string>
    <!-- Features end -->
</resources>
