<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/string_font_size"
        android:gravity="center" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/name_en"
        android:id="@+id/textView2"
        android:layout_above="@+id/listView"
        android:layout_toRightOf="@+id/textView"
        android:textSize="@dimen/string_font_size"
        android:gravity="center" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:id="@+id/textView7"
        android:gravity="center"
        android:layout_above="@+id/listView"
        android:textSize="@dimen/string_font_size"
        android:layout_toRightOf="@+id/textView2" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:id="@+id/textView8"
        android:gravity="center"
        android:layout_above="@+id/listView"
        android:textSize="@dimen/string_font_size"
        android:layout_toRightOf="@+id/textView7" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/textView9"
        android:gravity="center"
        android:layout_above="@+id/listView"
        android:layout_toRightOf="@+id/textView8"
        android:textSize="@dimen/string_font_size"
        android:layout_alignParentStart="false" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:choiceMode="singleChoice" />
</RelativeLayout>