<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/name"
        android:textSize="@dimen/string_font_size"
        android:gravity="center" />

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/nameEn"
        android:textSize="@dimen/string_font_size"
        android:gravity="center" />

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/levelString"
        android:textSize="@dimen/string_font_size"
        android:gravity="center"
        android:text="@string/one"
        android:visibility="gone" />

    <Spinner
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:id="@+id/levelSpinner"
        android:visibility="gone" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/levelEdit"
        android:inputType="number"
        android:visibility="gone"
        android:text="@string/defaultCharacteristicCost"
        android:textSize="@dimen/string_font_size" />

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/costString"
        android:textSize="@dimen/string_font_size"
        android:gravity="center"
        android:visibility="gone" />

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/costEdit"
        android:textSize="@dimen/string_font_size"
        android:text="@string/defaultCharacteristicCost"
        android:visibility="gone" />

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:gravity="center"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full"
        android:id="@+id/full"
        android:layout_marginLeft="60dp" />

</LinearLayout>